Fix info section wraping

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ ul{
     justify-content: space-between;
 }
 .info{
+    flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,11 +63,14 @@ ul{
 }
 .info-container{
     display: flex;
-    width: 1000px;
+    flex-wrap: wrap;
+    max-width: 1200px;
     justify-content: space-between;
     gap: 20px;
 }
 .info-pictures{
+    flex-wrap: wrap;
+    flex:0 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
